ifcc-test-output/testfiles-4_invalid_column/gcc-compile.txt
input.c: In function ‘main’:
input.c:2:4: error: expected declaration or statement at end of input
    2 |    return 67;
      |    ^~~~~~

exit status: 1
